# FHIR-MDR

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  COPYING  G4-1.1_PATCH_README.md  G4-1_SERVICES_PATCH.md  MINIPATCH_README.md  README.md  README_G4_1_2.md  doctor.py  doctor.sh  pyproject.toml  requirements.txt  run_tests.sh
.github/workflows/: tests.yml
docs/: TEST_PLAN.md
docs/patches/: G4-1_services_capsule.md
mdr_gtk/: __main__.py  about.py  app.py  db.py  diagnostics.py  fhir_export.py  fhir_filter.py  fhir_ingest.py  fhir_repo.py  fhir_selected_export.py  fhir_xml.py  gui_services.py  models.py  repositories.py  services.py  ui.py  util.py  validator.py
mdr_gtk/scripts/: export_csv.py  export_fhir_bundle_json.py  export_fhir_bundle_xml.py  export_json.py  export_skos.py  import_fhir_bundle.py  import_fhir_package.py  import_json.py  init_db.py
migrations/: schema.sql  seed.sql
packaging/: README.md
packaging/common/: NOTES.md
packaging/macos/: README.md  build.sh
packaging/windows/: README.md  build.ps1
tests/: sample_bundle.json  sample_package.tgz  test_app_imports.py  test_diagnostics.py  test_fhir_repo.py  test_fhir_schema_and_import.py  test_g31_packaging.py  test_g3_filters.py  test_g3_selected_export.py  test_gui_services_facade.py  test_gui_smoke.py  test_gui_strict_clean.py  test_ingest_conflicts.py  test_package_import.py  test_release_hardening.py  test_services_layer.py
tests/sample_package_dir/package/: Patient-pat-1.json  StructureDefinition-patient-demo.json  bundle.json  package.json
tools/: gui_strict_clean.py
