[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdr-gtk"
version = "1.3.1"
description = "ISO/IEC 11179 core+ MDR for SQLite with GTK4 PyGObject GUI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-only"}

classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
]
