[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdr-gtk"
version = "0.0.4"
description = "ISO/IEC 11179 core+ MDR for SQLite with GTK4 PyGObject GUI"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only"

classifiers = [
  "Programming Language :: Python :: 3",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["mdr_gtk*"]
exclude = ["packaging*", "migrations*", "tests*"]

[project.optional-dependencies]
gui = [
  "PyGObject"
]